<resources>
    <string name="app_name">FlexinFitness</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="done_create_log">DONE</string>
    <string name="workout_name_create_log">WORKOUT NAME</string>
    <string name="date_create_log">DATE</string>
    <string name="start_time_create_log">START TIME</string>
    <string name="duration_mins_create_log">DURATION(mins)</string>
    <string name="body_weight_lbs_create_log">BODY WEIGHT(lbs)</string>
    <string name="click_create_log">CLICK</string>
    <string name="submit_values_create_log">SUBMIT VALUES</string>
    <string name="hint_name_create_log">Name</string>
    <string name="hint_date_create_log">Date</string>
    <string name="hint_time_create_log">Time</string>
    <string name="hint_workout_duration">Total Minutes</string>
    <string name="add_exercise_create_log">Add Exercise</string>
    <string name="total_weight_create_log">Total Weight</string>
    <string name="add_log_home">+ Add Log</string>
    <string name="home_homepage">HOME</string>
    <string name="log_history_homepage">Log History</string>
    <string name="sign_in_main">Sign In</string>
    <string name="sign_in_with_google_using_firebase_main">Sign-In with Google using Firebase!</string>
    <string name="sign_in_with_google_main">Sign In with Google</string>
    <string name="notifications">Notifications</string>
    <string name="workout_planner">WORKOUT PLANNER</string>
    <string name="rest_between_sets">REST BETWEEN SETS</string>
    <string name="time_to_perform">TIME TO PERFORM</string>
    <string name="date_to_perform">DATE TO PERFORM</string>
    <string name="workout_name">WORKOUT NAME</string>
    <string name="done">DONE</string>
    <string name="submit">SUBMIT</string>
    <string name="play_pushup_tutorial">PLAY PUSHUP TUTORIAL</string>
    <string name="logout">LOGOUT</string>
    <string name="settings">SETTINGS</string>
    <string name="fitness_application">Fitness Application</string>
    <string name="log">LOG</string>
    <string name="tutorials">Tutorials</string>
    <string name="functionality">Functionality</string>
    <string name="create_log_activity_notification">Create Log Activity Notification</string>
    <string name="create">Create …</string>
    <string name="play_pushups">Play PushUps</string>
    <string name="play_crunches">Play Crunches</string>
    <string name="play_squats">Play Squats</string>
    <string name="play_lunges">Play Lunges</string>
    <string name="home">HOME</string>
    <string name="camera">CAMERA</string>
    <string name="takePicture">Take Picture</string>
    <string name="todo">todo</string>
    <string name="todo_2">TODO</string>
    <string name="workoutName">Workout Name</string>
    <string name="workoutDate">Workout Date</string>
    <string name="workoutTime">Workout Time</string>
    <string name="workoutDuration">Workout Duration</string>
    <string name="userWeight">Your Weight</string>
    <string name="addExercise">+ ADD EXERCISE</string>
    <string name="save">Save</string>
    <string name="age">AGE</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="activity_level">ACTIVITY LEVEL</string>
    <string name="lbs">lbs</string>
    <string name="inches">inches</string>
    <string name="calories_needed">CALORIES NEEDED</string>
    <string name="bmi">BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="calculators_2">CALCULATORS</string>
</resources>
